# athion-mc

./: .gitignore  CONTEXT.md  README.md
launcher/spike-jvm-ipc/: Cargo.toml  README.md
launcher/spike-jvm-ipc/src/: main.rs
launcher/spike-jvm-ipc/test-client/: TestClient.java
launcher/spike-mc-transition/: Cargo.toml
launcher/spike-mc-transition/src/: main.rs
launcher/spike-overlay/: Cargo.toml  README.md
launcher/spike-overlay/src/: main.rs
launcher/spike-transition/: Cargo.toml  README.md
launcher/spike-transition/src/: main.rs
launcher/spike-transition/test-instance/: TestInstance.java
mod-hub/: gradle.properties
mod-hub/src/main/java/com/liminal/hub/: IpcClient.java  LiminalHubMod.java
mod-hub/src/main/resources/assets/liminal_hub/lang/: en_us.json
