[package]
name = "liminal-spike-mc-transition"
version = "0.1.0"
edition = "2021"
publish = false
description = "Spike: real Minecraft instance-A → instance-B transition via Prism Launcher CLI."

[[bin]]
name = "liminal-spike-mc-transition"
path = "src/main.rs"

[dependencies]
# No tokio / tokio-tungstenite / serde / etc. — without our IPC mod inside
# real Minecraft, there's no JSON message exchange to do. Process spawn,
# window polling, and process kill are all sync stdlib.
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
