[package]
name = "liminal-spike-mc-transition"
version = "0.1.0"
edition = "2021"
publish = false
description = "Spike: real Minecraft instance-A → instance-B transition via Prism Launcher CLI."

[[bin]]
name = "liminal-spike-mc-transition"
path = "src/main.rs"

[dependencies]
# Sync WebSocket — fits the existing threaded-sync style (no tokio).
# tungstenite is what tokio-tungstenite wraps; using it directly keeps
# the build slim and avoids an async runtime in this spike.
tungstenite = "0.24"
serde_json = "1"
rand = "0.8"

windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
