[package]
name = "liminal-spike-overlay"
version = "0.1.0"
edition = "2021"
publish = false
description = "Spike #1 for Liminal Launcher: transparent always-on-top overlay window for the seamless-transition loading screen."

[[bin]]
name = "liminal-spike-overlay"
path = "src/main.rs"

[dependencies]
# windows-rs: official Microsoft-maintained bindings to Win32. Pinned to a
# specific minor — windows-rs has had API churn between minor versions, so
# we want a deliberate bump rather than a passive cargo-update one.
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
# Spikes run release builds because the timing/perceptual behavior we're
# validating (smooth fade, no perceptible flicker) is debug-build-noisy.
lto = true
codegen-units = 1
